# repo-beacon

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  tsconfig.json
.github/workflows/: ci.yml
demo/: package-lock.json  package.json
demo/src/components/: VSCodeWindow.tsx
demo/src/components/animations/: CircularOrbit.tsx  Fade.tsx  MatrixRain.tsx  NeonPulse.tsx  Shimmer.tsx  Typewriter.tsx
demo/src/types/: ColorScheme.ts
docs/: INTEGRATIONS.md  ROADMAP.md  VISION.md
docs/plans/: DEVELOPMENT_PLAN.md  IMPLEMENTATION_BRIEFS.md
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/src/commands/: index.ts
extension/src/config/: settings.ts
extension/src/overlay/: manager.ts  protocol.ts
extension/src/webview/: BeaconPanel.ts  content.ts
overlay/: README.md  index.html  package-lock.json  package.json  vite.config.ts
overlay/src/: styles.css
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/src/: ipc.rs  main.rs  window_finder.rs
overlay/src/animations/: fade.css  pulse.css  shimmer.css
scripts/: build-overlay.sh  bundle-extension.sh  clean.sh  mock-extension.ts  mock-overlay.ts  test-ipc.ts
src/: App.tsx  index.css
src/components/animations/: ColorSweep.tsx  DVDBounce.tsx  DiagonalSlide.tsx  Flip3D.tsx  Glitch.tsx  HorizontalScroll.tsx  Pulse.tsx  VerticalScroll.tsx  Wave.tsx
